--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+    "printWidth": 80,
+    "semi": true,
     "singleQuote": true,
-    "plugins": [
-        "prettier-plugin-organize-imports",
-        "prettier-plugin-tailwindcss"
-    ]
-}
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "arrowParens": "avoid"
+  }
