--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "eslint": "^8.57.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react": "^7.34.4",
+        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^4.6.2",
+        "husky": "^9.1.7",
         "laravel-vite-plugin": "^1.0",
+        "lint-staged": "^15.4.1",
         "postcss": "^8.4.31",
-        "prettier": "^3.3.0",
+        "prettier": "^3.4.2",
+        "prettier-plugin-blade": "^2.1.19",
         "prettier-plugin-organize-imports": "^4.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.5",
+        "prettier-plugin-tailwindcss": "^0.6.10",
+        "pretty-quick": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
