--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "@heroicons/react": "^2.2.0"
+        "@heroicons/react": "^2.2.0",
+        "react-google-recaptcha": "^3.1.0"
     }
 }
